--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <title>Film Finder</title>
   </head>
   <body>
+    <!-- modal -->
+    <div id="modal-bg" class="hidden"></div>
+    <div id="modal" class="hidden"></div>
     <div class="container">
       <div class="row justify-content-center">
         <div class="col-12 col-sm-6">
@@ -38,17 +41,10 @@
           </form>
           <!-- Display search -->
           <div id="display"></div>
-
-          <!-- modal -->
-          <div id="modal"></div>
         </div>
       </div>
     </div>
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+
     <script src="script.js"></script>
   </body>
 </html>
